--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Suteja30></title>
-	<link rel="stylesheet" type="text/css"href="style.css">
-	</head>
-	<body>
-		<h1>Welcome my website</h1>
-		<p>Saya Suteja, NIM: 41216011</p>
-	<img src="img_foto.jpg">
-</body>
-</html>
+<style>
+	h1{
+  color: blue;
+  cursor: pointer;
+  transition: 0.2s;
+}
+h1:hover{
+  color : red;
+  letter-spacing: 4px;
+}
+img{
+	width: 5cm;
+	border-radius: 30%;
+	box-shadow: 1px 1px 4px gray;
+	padding: 5px;
+	background: white;
+	margin: 15px;
+	transition: 0.2s;
+	opacity: 75%;
+
+}
+img{hover
+tranform:  scale(1.5);
+opacity:100%;
+box-shadow: 1px 1px 6px red;
+}
+</style>
+
+<h1>Hello world HTML</h1>
+<p>Saya Suteja, NIM: 41216011</p>
+<img src="img_foto.jpg">
+<button onclick="alert('Hello world javascript!t')">Hello Javascript!</button>
