--- a/p03.html
+++ b/p03.html
@@ -48,7 +48,7 @@ img {
   width: 500px;
   height: 20px;
   box-shadow: 0px 0px 10px 3px;
-  background: lightgoldenrodyellow;
+  background: ghostwhite;
 }
 
 .my-instagram a {
@@ -67,7 +67,7 @@ img {
   width: 500px;
   height: 20px;
   box-shadow: 0px 0px 10px 3px;
-  background: lightgoldenrodyellow;
+  background: whitesmoke;
 }
 
 .my-github a {
