--- a/p03css.html
+++ b/p03css.html
@@ -29,7 +29,7 @@
         transition: 0.2s;
       }
       table {
-        border: 4px solid;
+        border: 6px solid;
       }
       table tr th {
         background-color: lightskyblue;
@@ -43,7 +43,7 @@
       }
 
       table tr td {
-        background-color: darkblue;
+        background-color: whitesmoke;
         transition: 0.4s;
       }
 
@@ -73,7 +73,7 @@
         <tr>
           <td>1</td>
           <td>Madyanto</td>
-          <td>Indramayu</td>
+          <td>indramayu</td>
           <td>Edit | Hapus</td>
         </tr>
         <tr>
@@ -85,7 +85,7 @@
         <tr>
           <td>3</td>
           <td>Rizwar</td>
-          <td>kuningan</td>
+          <td>Kuningan</td>
           <td>Edit | Hapus</td>
         </tr>
         <tr>
@@ -96,7 +96,7 @@
         </tr>
         <tr>
           <td>5</td>
-          <td>masdarul riski</td>
+          <td>Masdarul riski</td>
           <td>Indramayu</td>
           <td>Edit | Hapus</td>
         </tr>
