--- a/p04css.html
+++ b/p04css.html
@@ -29,7 +29,7 @@ p04css.html
             font-weight: bold;
         }
         ol li{
-            color: red;
+            color: black;
         }
         legend{
             color: rgb(0, 0, 0);
@@ -285,11 +285,6 @@ p04css.html
    
     <div class="Tombol-Kirim">
         <a href="respon.html">Kirim</a>
-    </div>
-    <br>
-    <br>
-    <div class="tombol">
-        <a href="../P07 SPA GITHUB PAGES/P07 SPA GITHUB PAGES.html">Back</a>
     </div>
     <br>
 
